--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
   "build": {
     "appId": "com.nthing.app",
     "productName": "Nthing",
+    "asarUnpack": [
+      "node_modules/mammoth/**/*"
+    ],
     "win": {
       "target": [
         {
