Disable asar packaging to fix mammoth module loading
The asarUnpack approach wasn't working because mammoth has many
dependencies (jszip, xmldom, etc.) that also need to be unpacked.
Disabling asar entirely is simpler and ensures all modules load correctly.

Trade-off: Slightly larger installer and slower startup, but more reliable
module loading for complex dependencies like mammoth.

--- a/package.json
+++ b/package.json
@@ -36,9 +36,7 @@
   "build": {
     "appId": "com.nthing.app",
     "productName": "Nthing",
-    "asarUnpack": [
-      "node_modules/mammoth/**/*"
-    ],
+    "asar": false,
     "win": {
       "target": [
         {
